@@ -2,9 +2,18 @@
 
 SETLOCAL
 
-if NOT DEFINED JAVA_HOME goto error
-set RUN_JAVA=%JAVA_HOME%\bin\java
+if "x%JAVA_HOME%" == "x" (
+    echo JAVA_HOME environment variable not available.
+    set RUN_JAVA=java
+) else (
+    set "RUN_JAVA=%JAVA_HOME%\bin\java"
+)
 
+"%RUN_JAVA%" -version 1>nul 2>nul || (
+    echo JAVA could not be found in your system.
+    echo Please install Java 1.8 or higher!!!
+    exit /b 2
+)
 
 REM ******* you can enable following variables by uncommenting them
 
@@ -23,14 +32,13 @@ if NOT "%MAX_HEAP_SIZE%" == "" (
 	set JAVA_OPTS=%JAVA_OPTS% -Xmx%MAX_HEAP_SIZE%
 )
 
-set "CLASSPATH=%~dp0..\lib\hazelcast-all-${project.version}.jar"
+FOR /F "tokens=* USEBACKQ" %%F IN (`CALL "%RUN_JAVA%" -cp "%~dp0..\lib\hazelcast-all-${project.version}.jar" com.hazelcast.internal.util.JavaVersion`) DO SET JAVA_VERSION=%%F
 
-FOR /F "tokens=2 delims=," %%F in ('tasklist /NH /FI "WINDOWTITLE eq hazelcast %CLASSPATH%" /fo csv') DO (
-SET PID=%%F
+IF NOT "%JAVA_VERSION%" == "8" (
+	set JAVA_OPTS=%JAVA_OPTS% --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
 )
-IF NOT "%PID%"=="" (
-    goto alreadyrunning
-)
+
+set "CLASSPATH=%~dp0..\lib\hazelcast-all-${project.version}.jar;%~dp0..\bin\user-lib;%~dp0..\bin\user-lib\*"
 
 ECHO ########################################
 ECHO # RUN_JAVA=%RUN_JAVA%
@@ -38,17 +46,6 @@ ECHO # JAVA_OPTS=%JAVA_OPTS%
 ECHO # starting now...."
 ECHO ########################################
 
-start "hazelcast %CLASSPATH%" "%RUN_JAVA%" %JAVA_OPTS% -cp "%CLASSPATH%" "com.hazelcast.core.server.StartServer"
-goto endofscript
-
-:error
-ECHO JAVA_HOME environment variable must be set!
-pause
-
-:alreadyrunning
-ECHO Another Hazelcast instance (PID=%PID%) is already started in this folder. To start a new instance, please unzip the zip file in a new folder.
-pause
-
-:endofscript
+"%RUN_JAVA%" %JAVA_OPTS% -cp "%CLASSPATH%" "com.hazelcast.core.server.HazelcastMemberStarter"
 
 ENDLOCAL
